# CameraController

./: .gitignore  README.md  cross-compile  cross_file.txt  libexif.sh  libgphoto2.sh  meson.build
src/: circular_buffer.h  debug.h  logger.h  main.cpp
src/camera/: CameraWrapper.cpp  CameraWrapper.h
src/camera/gphoto2/: gphoto2-file.h
src/commands/: Commands.cpp  Commands.h
src/communication/: Message.h  MessageDecoder.cpp  MessageDecoder.h  MessageEncoder.h  MessageHandler.h  TCPServer.cpp  TCPServer.h  TCPStream.h
src/functions/: camerafunction.h  intervalometer.cpp  intervalometer.h  sequencer.cpp  sequencer.h
src/utils/: RemoteTrigger.cpp  RemoteTrigger.h  print_functions.h
subprojects/: libexif.wrap  libgphoto2.wrap
